<resources>
    <string name="app_name">LEDsign</string>
    <string name="app_version">1.0</string>
    <string name="app_author">Kevin Kowalski</string>
    <string name="app_link">https://github.com/kkevn/LEDsign</string>
    <string name="app_description">LEDsign provides quick and intuitive customization of multi-effect profiles that can be uploaded via Bluetooth to the physical complement of this project for real-world display.</string>
    <string name="processing_name">Processing for Android</string>
    <string name="processing_version">4.1.1</string>
    <string name="processing_author">Processing Foundation</string>
    <string name="processing_link">https://android.processing.org/</string>
    <string name="processing_description">Processing for Android is an Android Library that extends the Processing software language to run sketches on Android devices.</string>
    <string name="gson_name">Gson</string>
    <string name="gson_version">2.8.6</string>
    <string name="gson_author">Google</string>
    <string name="gson_link">https://github.com/google/gson</string>
    <string name="gson_description">Gson is a Java library that can be used to convert Java Objects into their JSON representation.</string>
    <string name="swipereveal_name">SwipeRevealLayout</string>
    <string name="swipereveal_version">1.4.1</string>
    <string name="swipereveal_author">Chau Thai</string>
    <string name="swipereveal_link">https://github.com/chthai64/SwipeRevealLayout</string>
    <string name="swipereveal_description">SwipeRevealLayout is an Android library providing a layout that can be swiped to reveal another layout.</string>
    <string name="expandabletext_name">ExpandableTextView</string>
    <string name="expandabletext_version">0.1.4</string>
    <string name="expandabletext_author">Manabu S.</string>
    <string name="expandabletext_link">https://github.com/Manabu-GT/ExpandableTextView</string>
    <string name="expandabletext_description">ExpandableTextView is an Android library that allows developers to easily create a TextView which can expand/collapse.</string>
    <string name="materialdrawer_name">Material Navigation Drawer</string>
    <string name="materialdrawer_version">1.4</string>
    <string name="materialdrawer_author">Pedro Oliveira</string>
    <string name="materialdrawer_link">https://github.com/kanytu/Android-studio-material-template</string>
    <string name="materialdrawer_description">A template for Android Studio to create applications with a Material navigation drawer.</string>
    <string name="support_name">Android Support Libraries</string>
    <string name="support_version">28.0.0</string>
    <string name="support_author">Google</string>
    <string name="support_link">https://developer.android.com/topic/libraries/support-library</string>
    <string name="support_description">This package of libraries provides several features that are not built into the standard Android framework, and provides backward compatibility for older devices.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pref_general_key">GENERAL</string>
    <string name="pref_general_title">General</string>
    <string name="pref_auto_load_key">AUTO_LOAD</string>
    <string name="pref_auto_load_title">Auto-Load Last Profile</string>
    <string name="pref_auto_load_summary">Whether or not launching this app should auto-load the last used profile.</string>
    <string name="pref_default_name_key">DEFAULT_NAME</string>
    <string name="pref_default_name_title">Default Profile Name</string>
    <string name="pref_default_name_summary">Specifies the default name new profiles will use.</string>
    <string name="pref_theme_key">THEME</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_summary"></string>
    <string-array name="pref_theme_entries">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_color_key">COLOR</string>
    <string name="pref_color_title">Accent Color</string>
    <string name="pref_color_summary">The color to accentuate this application with.</string>
    <string name="pref_3d_preview_key">3D_PREVIEW</string>
    <string name="pref_3d_preview_title">3D Preview</string>
    <string name="pref_auto_rotate_key">AUTO_ROTATE</string>
    <string name="pref_auto_rotate_title">Auto-Rotate</string>
    <string name="pref_auto_rotate_summary">Whether or not the 3D preview should initially auto-rotate.</string>
    <string name="pref_sensitivity_key">SENSITIVITY</string>
    <string name="pref_sensitivity_title">Rotation Sensitivity</string>
    <string name="pref_sensitivity_summary">1.0x</string>
    <string name="pref_hud_key">HUD</string>
    <string name="pref_hud_title">Hide HUD Buttons</string>
    <string name="pref_hud_summary">Select which HUD buttons should be hidden.</string>
    <string-array name="pref_hud_entries">
        <item>Recenter</item>
        <item>Auto-Rotate</item>
        <item>Rotate Once Left</item>
        <item>Rotate Once Right</item>
    </string-array>
    <string-array name="pref_hud_values">
        <item>CENTER</item>
        <item>AUTO</item>
        <item>LEFT</item>
        <item>RIGHT</item>
    </string-array>
    <string-array name="empty_array">
    </string-array>
    <string name="nav_header_title">Bluetooth Status:</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connecting">Connecting to Device</string>
    <string name="menu_new_profile">New Profile</string>
    <string name="menu_load_profile">Load Profile</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_configure_scrolling_text">Configure Scrolling Text Effect</string>
    <string name="menu_configure_solid_color">Configure Solid Color Effect</string>
    <string name="menu_configure_wave_color">Configure Wave Effect</string>
    <string name="menu_configure_fade_color">Configure Fade Effect</string>
    <string name="menu_configure_color_wipe">Configure Color Wipe Effect</string>
    <string name="menu_configure_theater_chase">Configure Theater Chase Effect</string>
    <string name="configure_missing_param">Blank Input(s) Detected</string>
    <string name="menu_prof_save">Save Profile</string>
    <string name="menu_prof_bt">Bluetooth</string>
    <string name="menu_prof_rename">Rename Profile</string>
    <string name="menu_prof_reset_menu">Reset Profile</string>
    <string name="menu_prof_clear">Clear Effects</string>
    <string name="menu_prof_reset">Reset Signal</string>
    <string name="menu_prof_upload">Upload Profile</string>
    <string name="menu_effect_header">Effect Options:</string>
    <string name="menu_effect_edit">Edit</string>
    <string name="menu_effect_duplicate">Duplicate</string>
    <string name="menu_effect_remove">Remove</string>
    <string name="dialog_rename_profile">Enter a new name for this profile:</string>
    <string name="dialog_rename">Rename</string>
    <string name="dialog_empty">Name must have at least one character.</string>
    <string name="dialog_already_exists">This profile name already exists.</string>
    <string name="dialog_save_profile">Would you like to save your progress?</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_discard">Discard</string>
    <string name="dialog_help_info">Help</string>
    <string name="dialog_ok">OK</string>
    <string name="message_no_profiles">No profiles have been saved yet.</string>
    <string name="dialog_help_matrix_select">Sets this effect to apply to only the selected sides.
        \n\nEffects can be applied to any combination of at least one side of the cube. The sides
        do not need to be adjacent to one another in order for the effect to work.</string>
    <string name="dialog_help_edit_text">Sets the desired text to appear.\n\nOnly letters
        and numbers are allowed up to a maximum length of 32 characters.</string>
    <string name="dialog_help_color_picker">Sets the desired color for your effect.\n\nAdjust
        the sliders for each RGB value and observe the current color in the preview box.
        Additionally, manually enter a color HEX code in the field below the sliders.</string>
    <string name="dialog_help_toggle">Toggles a specific attribute on or off.\n\nThe
        attribute this toggles usually depends on the effect in question. However the label
        beside the checkbox should be enough of an indicator as to what the attribute toggles.</string>
    <string name="dialog_bt_profile">Select a Paired Device:</string>
    <string name="dialog_refresh">Refresh</string>
    <string name="dialog_discover">Discover</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_select_effect">Select an Effect:</string>
    <string name="notify_missing_bt">Device Missing Bluetooth Support</string>
    <string name="notify_no_paired_bt">No Paired Devices Found</string>
    <string name="notify_require_bt">Allow Bluetooth for Uploading Profiles</string>
    <string name="notify_failed_upload">Profile Failed to Upload</string>
    <string name="edit_text_inputs">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqr‌​stuvwxyz0123456789_-\u0020</string>
    <string name="edit_text_hexadecimal">ABCDEFabcdef0123456789</string>
    <string name="date_time_format_pattern">MMMM dd, yyyy, hh:mm:ss a</string>
    <string-array name="help_title_create">
        <item>add an effect</item>
        <item>edit an effect</item>
        <item>duplicate an effect</item>
        <item>remove an effect</item>
        <item>clear all effects</item>
        <item>reorder effects</item>
        <item>save your profile</item>
        <item>rename your profile</item>
    </string-array>
    <string-array name="help_title_load">
        <item>edit a profile</item>
        <item>duplicate a profile</item>
        <item>delete a profile</item>
    </string-array>
    <string-array name="help_title_bluetooth">
        <item>connect to hardware cube</item>
        <item>check connection status</item>
        <item>upload your profile</item>
        <item>reset the hardware cube</item>
    </string-array>
    <string-array name="help_title_3d">
        <item>free rotate the preview cube</item>
        <item>quick rotate 90°</item>
        <item>enable auto-rotation</item>
        <item>recenter the preview cube</item>
    </string-array>
    <string-array name="help_videos_create">
        <item>@raw/create_add</item>
        <item>@raw/create_edit</item>
        <item>@raw/create_dupe</item>
        <item>@raw/create_remove</item>
        <item>@raw/create_clear</item>
        <item>@raw/create_reorder</item>
        <item>@raw/create_save</item>
        <item>@raw/create_rename</item>
    </string-array>
    <string-array name="help_videos_load">
        <item>@raw/load_edit</item>
        <item>@raw/load_dupe</item>
        <item>@raw/load_remove</item>
    </string-array>
    <string-array name="help_videos_bluetooth">
        <item>@raw/bluetooth_connect</item>
        <item>@raw/bluetooth_check_status</item>
        <item>@raw/bluetooth_upload</item>
        <item>@raw/bluetooth_reset</item>
    </string-array>
</resources>