<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true">

    <LinearLayout
        android:id="@+id/ll_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp">

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/swipereveal_name"
                android:paddingEnd="32dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="viewStart"/>

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/swipereveal_version"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="viewEnd"/>

        </RelativeLayout>

        <View style="@style/DividerSmall"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_logo_github" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/swipereveal_description"
                android:textSize="14sp"/>

        </LinearLayout>

        <View style="@style/DividerSmall"/>

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/swipereveal_author"
            android:textSize="14sp"
            android:textStyle="italic"
            android:textAlignment="center"/>

    </LinearLayout>

</android.support.v7.widget.CardView>